--- a/client/package.json
+++ b/client/package.json
@@ -6,9 +6,12 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^13.1.1",
-    "axios": "^1.1.2",
+    "axios": "^1.1.3",
+    "dotenv": "^8.2.0",
+    "nodemon": "^2.0.20",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.6.0",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
