--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.1.1",
     "axios": "^1.1.3",
     "dotenv": "^8.2.0",
+    "dotenv-webpack": "^8.0.1",
     "nodemon": "^2.0.20",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
